--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -1,48 +1,51 @@
-This paper seeks whether or not a new relationship is emerging between electricity service providers 
-and supercomputer centers with the impetus for more communication and engagement coming from both parties.  
-Supercomputer centers have increasingly large electricity demand and fluctuations that can be a challenge 
-for their providers and the reliable supply of electricity.  On the other hand, electricity service providers 
-are interested in partnering with customers, like supercomputer centers, to obtain predictable demand 
-forecasts and engage in programs like demand response in order to create a more dynamic and resilient grid.
+This paper explores the possibility of a new relationship between electricity service providers
+and supercomputer centers with increased communication and engagement from both parties
 
-We focused our attention on the largest supercomputing centers in the United States. The two supercomputing 
-centers with the largest electricity demand, ORNL and LLNL, have very different experiences.  ORNL's 
-experience is that their electricity demand and fluctuations are not significant factors for their 
-electricity service provider.  LLNL's experience is opposite of ORNL.  Because of the large swings in 
-power usage, the LLNL supercomputing center was approached by their electricity service provider with a 
-request for daily predictable demand forecasts.   That initiated the development of an on-going relationship.  
-LANL's supercomputing center's experience is similar to that of LLNL. SDSC has an even tighter relationship 
+Because supercomputer centers have an increasingly large and fluctuating demand for power, they 
+challenge their providers to supply a reliable source of electricity. Electricity service providers 
+are interested in partnering with customers, like supercomputer centers, to create a more dynamic and resilient grid
+by obtaining predictable demand forecasts and engaging in programs like demand response.
+
+We focused our attention on the largest supercomputer centers in the United States. The two supercomputer 
+centers with the largest electricity demand, ORNL and LLNL, have very different experiences.  
+ORNL's experience is that its electricity demand and fluctuations are not significant factors for their 
+electricity service provider.  
+LLNL's experience is opposite to that of ORNL.  Because of large swings in 
+power usage, the LLNL supercomputer center was approached by their electricity service provider with a 
+request for daily predictable demand forecasts. That request began an ongoing relationship.  
+
+The LANL supercomputer center's experience is similar to that of LLNL. SDSC has an even tighter relationship 
 with their electricity service provider, but this relationship involves the entire campus and not just the 
 supercomputer center.  
 
-As the previous research with data centers has shown, supercomputer centers can also be considered 
-resourceful to the grid. To enable this, automation technologies and data communication standards, 
-which can link the supercomputer centers with the electric grid, and on-site power management strategies 
+As previous research with datacenters has shown \textbf{[need a ref here]}, supercomputer centers can serve as   
+resources to the grid. To enable this, automation technologies and data communication standards, 
+which can link the supercomputer centers with the electric grid and on-site power management strategies 
 for grid services will play a key role to ease adoption and lower the participation costs.  Power capping, 
-shutdown and job scheduling are identified as the most interesting management strategies with highest 
+shutdown, and job scheduling are identified as the most interesting management strategies with the highest 
 leverage for responding to requests from electricity service providers.  
 
-The business case for grid integration of supercomputer centers though, has yet to be demonstrated.  
-There are concerns about the impact that deploying these strategies might have on the primary mission 
-of the supercomputer centers.  One of the key enablers for supercomputing centers to participate in 
+Nonetheless, the business case for the grid integration of supercomputer centers remains to be demonstrated.  
+Supercomputer centers have concerns that deploying these strategies might have an adverse impact on 
+their primary mission. One of the key enablers for supercomputing centers to participate in 
 electricity markets (e.g., demand response, electricity prices) is having markets that value their 
 participation. In other areas like commercial buildings and select industrial facilities, benefits to 
-both electricity service providers and customers are well documented. However, as the electric grid 
+both electricity service providers and customers are well documented. However, as the electrical grid 
 and new dynamic loads such as supercomputer centers evolve, the markets need mechanisms to identify 
 and provide value of participation (e.g., cost, energy, carbon).
 
-There are several areas suggested for future work that we are planning to pursue.
+We are planning to pursue several areas in our future work.
 
-The business value of such grid integration is likely enhanced further where the price of 
-electricity is expensive, varies dynamically or where there is strong reliance on expensive back-up 
-generation (e.g., India).  We plan on conducting a similar survey in Europe, where electricity is more 
-expensive, to explore if there is a more compelling business case in other geographies.    
+We are planning a similar survey for Europe to explore if there is a more compelling business case 
+in other geographies.
+We expect that the business value of such grid integration to be enhanced where the price of 
+electricity is expensive, varies dynamically, or where there is strong reliance on expensive back-up 
+generation (e.g., India),   
 
-This work's focus was from the perspective of the supercomputer center.  It might yield different 
-results if we were to hear from the ESPs about what makes a customer more or less interesting or 
-challenging with respect to grid integration.  How do they view supercomputer centers relative to their 
-spectrum of customers?  We plan on follow-up with the ESPs that support these US-based supercomputer 
-centers to explore this question further.
+We plan on following-up with the ESPs that support these US-based supercomputer 
+centers. We note that this work's focus was from the perspective of the supercomputer center, and 
+we are interested in hearing from the ESPs about what makes a customer more or less interesting or 
+challenging with respect to grid integration.
 
 With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
 and demand forecasting is becoming increasingly important. Understanding the timescales of supercomputer 
