--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -1,10 +1,13 @@
 This paper explores the possibility of a new relationship between electricity service providers
-and supercomputer centers with increased communication and engagement from both parties
+and supercomputer centers with increased communication and engagement from both parties.
 
-Because supercomputer centers have an increasingly large and fluctuating demand for power, they 
-challenge their providers to supply a reliable source of electricity. Electricity service providers 
-are interested in partnering with customers, like supercomputer centers, to create a more dynamic and resilient grid
-by obtaining predictable demand forecasts and engaging in programs like demand response.
+Because supercomputer centers have an increasingly large and fluctuating
+power demand, they challenge their providers to supply a reliable
+source of electricity.
+Electricity service providers are interested in partnering with customers,
+like supercomputer users, to create a more dynamic and resilient gr;id
+by obtaining predictable demand forecasts and engaging in programs like 
+demand response.
 
 We focused our attention on the largest supercomputer centers in the United States. The two supercomputer 
 centers with the largest electricity demand, ORNL and LLNL, have very different experiences.  
