--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -10,7 +10,7 @@ by obtaining predictable demand forecasts and engaging in programs like
 demand response.
 
 We focused our attention on the largest supercomputer centers in the United States. The two supercomputer 
-centers with the largest electricity demand, ORNL and LLNL, have very different experiences.  
+centers with the largest electricity demand, ORNL and LLNL, have had very different experiences.  
 ORNL's experience is that its electricity demand and fluctuations are not significant factors for their 
 electricity service provider.  
 LLNL's experience is opposite to that of ORNL.  Because of large swings in 
@@ -41,7 +41,7 @@ We are planning to pursue several areas in our future work.
 
 We are planning a similar survey for Europe to explore if there is a more compelling business case 
 in other geographies.
-We expect that the business value of such grid integration to be enhanced where the price of 
+We expect the business value of such grid integration to be enhanced where the price of 
 electricity is expensive, varies dynamically, or where there is strong reliance on expensive back-up 
 generation (e.g., India),   
 
@@ -51,8 +51,9 @@ we are interested in hearing from the ESPs about what makes a customer more or l
 challenging with respect to grid integration.
 
 With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
-and demand forecasting is becoming increasingly important. Understanding the timescales of supercomputer 
-center's load response will have different value to the electric grid programs. What are the trends 
+and demand forecasting are becoming increasingly important. 
+Electrical grid programs may react in different ways to the timescale of a supercomputer center's load response.
+What are the trends 
 in inter-hour fluctuation patterns?  Is this a new behavior, an interim one, or one that is likely to get worse?  
 
 
