--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -89,6 +89,9 @@ fluctuations in electricity demand, which, as discussed further in the questionn
 characteristic of the largest supercomputer centers.  
 \footnote {http://drrc.lbl.gov/sites/drrc.lbl.gov/files/LBNL-5958E.pdf}
 
+This paper assumes that the given grid is a constant. However, it is expected that future grid infrastructures will 
+evolve with smart-grid capabilities. 
+
 \subsection{Supercomputing Centers\\
 and HPC-Grid Integration}
 
