Some misspelling corrections, and moving two paragraphs from Prior Work section to other parts.

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -29,7 +29,7 @@ This is just one among many other instances where SCs have shown to be
 resourceful in aiding their ESPs.
 
 In the past, large smelters and manufacturing industries extended 
-great influence on the electrical grid; but today, becasue of their increasing power demands,
+great influence on the electrical grid; but today, because of their increasing power demands,
 supercomputing centers are the key players.
 While supercomputing centers often focus on energy efficiency to lower costs, 
 it is important to understand if this focus is also a key interest for ESPs.
@@ -39,8 +39,9 @@ A mutual understanding of concerns between the SC and ESP can
 produce a symbiotic relation that goes beyond the current producer-consumer 
 paradigm, paving the way for possible integration of HPC with the electrical grid.
 
-The Energy Efficient HPC Working Group
-(\href {http://eehpcwg.lbl.gov/}{EE HPC WG})  
+In this paper, we assume that the grid is a given constant as a fundamental property. However, grid integration solutions may take into consideration that it is not a given constant as electrical grid infrastructures will evolve in the future \cite{he_architecture_2008}. Thus, changes in the grid could make grid integration more or less difficult.
+
+The Energy Efficient HPC Working Group (\href {http://eehpcwg.lbl.gov/}{EE HPC WG})  
 has been investigating opportunities for large supercomputing sites to  
 integrate more closely with their electricity service providers.
 The objectives of this investigation are to understand the willingness of SCs to
