--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -81,7 +81,7 @@ that the supercomputer center environment has some amount of
 instrumentation and metering that allows for the collection of power
 telemetry data.  This telemetry is necessary for the supercomputer
 center facility manager in order to understand how the power supplied
-by the energy service provider is distrubted to resources within the
+by the energy service provider is distributed to resources within the
 center.  Further, this telemetry is likely important to automated
 solutions for power management, such as the job scheduling techniques
 described below.  In light of the fact that many system integrators
