Removed virtualization and added PUE reference.
Need to add FineGrainedPowerManagement as Sridutt suggested.

--- a/bib/patki.bib
+++ b/bib/patki.bib
@@ -5064,3 +5064,11 @@ YEAR = 2012
         address = "Seattle, WA",
 }
 
+@ARTICLE{Niccolai,
+        author = "James Niccolai",
+        title = "New data center survey shows mediocre results for energy efficiency",
+        booktitle = "ComputerWorld",
+        month = "April",
+        year = "2013",
+        url = "http://www.computerworld.com/s/article/9238364/New_data_center_survey_shows_mediocre_results_for_energy_efficiency?pageNumber=1",
+}
