Theoretical Peak Description

--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -44,6 +44,11 @@ fluctuations. The
 rest of the sites all reported less than 3MW intra-hour fluctuation. Most of the intra-hour variability
 was due to preventative maintenance (again, the power variation includes both computing and ancillary systems).
 
+For every respondent, the theoretical peak energy or maximum load is approximately twice the total energy, 
+which is indicative of expected future growth in power and energy requirements for supercomputer centers.  
+Some of the design parameters that may affect theoretical peak limits are the customer switchgear, transformer 
+and chiller water capacities.  
+In some cases, there are also limits based on regional electricity service provider capacity constraints.
 
 We asked if the supercomputer centers had talked to their electricity
 providers about programs and methods used to balance the grid supply and
