Making Prior Work a subsection
Making Prior Work a subsection to section "Supercomputing Centers and HPC-Grid Integration"

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -83,7 +83,7 @@ Fname Lname, Affiliation
 \input{supercomputercenters}
 \label{sec:supercomputer}
 
-\section{Prior Work}
+\subsection{Prior Work}
 \input{priorwork}
 \label{sec:priorwork}
 
