Making a new section SCs and HPC-Grid Integration
Carved a new section out of old section 2.2

--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -92,10 +92,11 @@ characteristic of the largest supercomputer centers.
 This paper assumes that the given grid is a constant. However, it is expected that future grid infrastructures will 
 evolve with smart-grid capabilities. 
 
-\subsection{Supercomputing Centers\\
-and HPC-Grid Integration}
+\section{Supercomputing Centers and \\ HPC-Grid Integration}
 
-As described in Section~\ref{sub:EPP}, electricity providers offer programs like peak shifting that may request 
+In recent times, the fundamental drive in supercomputing to increase peak performance by adding increasing number of power hungry components has waned, with the shift in focus to energy efficiency to mitigate large operating costs.
+In addition, supercomputing centers are concerned about quality, availability and environmental \&  social impact.
+As described in Section~\ref{sub:EPP}, ESPs may request 
 a change in timing and/or magnitude of demand by supercomputing centers.  
 In response, supercomputing centers may employ one or more of a number of strategies to control their 
 electricity demand.
