Eliminate redundancy: Matt's Comment
I think you only need to go into detail about this survey once, it seems redundant to say it again

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -69,12 +69,8 @@ with their ESPs, facilitating both energy efficiency and grid reliability.
 Section~\ref{sec:supercomputer}  of this paper describes in greater detail the model for
 integrating supercomputer centers and the electrical grid. Section~\ref{sec:priorwork}
 is a review of prior work on HPC center strategies that might be
-deployed for managing electricity and power. In order to further understand
-today`s relationships, potential partnerships and possible integration
-between HPC centers, their electricity providers and the grid, a
-questionnaire was deployed whose respondents were Top100 List class
-supercomputer centers in the United States. Section~\ref{sec:questionnaire} of this paper
-describes the results of that questionnaire. Section~\ref{sec:opportunities} of the paper
+deployed for managing electricity and power. Section~\ref{sec:questionnaire} of this paper
+describes the results of the questionnaire. Section~\ref{sec:opportunities} of the paper
 describes opportunities, solutions and barriers. Section~\ref{sec:conclusion} describes
 conclusions and next steps. Finally, the last section recognizes additional
 authors.
