Adding ideal value of PUE to PUE text

--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -20,7 +20,7 @@ more energy efficient than the average data center.
 According to prior studies,
 the average data center has a power usage effectiveness (PUE)
 of between 1.91 and 2.9, whereas the highest PUE reported by the
-supercomputer center respondents in this study is 1.53.
+supercomputer center respondents in this study is 1.53, with PUE of 1.0 being ideal.
 
 \subsection{Electricity Provider Programs\\
 and Methods}
